# pyprs

./: .gitignore  README.md  pyproject.toml
pyprs/: __main__.py
