[tool.poetry]
name = "pyprs"
version = "0.1.0"
description = ""
authors = ["charitybell <hello@charitybell.xyz>"]
readme = "README.md"

[tool.poetry.scripts]
pyprs = "pyprs.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.3.0"
flake8-pyproject = "^1.2.3"

[tool.pyprs.scripts]
flake8 = 'flake8 pyprs'
mypy = 'mypy --strict -p pyprs'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 99
